--- a/todomvc/package.json
+++ b/todomvc/package.json
@@ -12,8 +12,10 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "classnames": "^2.3.2",
+    "ky": "^0.33.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
     "sass": "^1.64.1",
     "typescript": "^4.4.2",
