--- a/todo-firebase/package.json
+++ b/todo-firebase/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.3.2",
     "firebase": "^10.1.0",
     "ky": "^0.33.3",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
@@ -59,6 +60,7 @@
     "@emotion/core": "^11.0.0",
     "@emotion/css": "^11.11.2",
     "@testing-library/jest-dom": "^5.17.0",
+    "@types/lodash": "^4.14.197",
     "@types/testing-library__jest-dom": "^5.14.9",
     "craco-alias": "^3.0.1",
     "eslint": "^8.47.0",
